# adb

./: CMakeLists.txt  README.md  build.sh  get_sources.sh
.github/workflows/: build.yml
cmake/: CMakeLists.txt  adb.cmake  fastboot.cmake  libandroidfw.cmake  libbase.cmake  libcrypto_utils.cmake  libcutils.cmake  libdiagnoseusb.cmake  libext4_utils.cmake  libincfs.cmake  liblog.cmake  liblp.cmake  libsparse.cmake  libusb.cmake  libutils.cmake  libz.cmake  libziparchive.cmake
patches/adb/: adb.cpp.patch  pairing_server.h.patch  sysdeps.h.patch  usb_libusb.cpp.patch
patches/adb/pairing_auth/include/adb/pairing/: pairing_auth.h.patch
patches/adb/pairing_connection/include/adb/pairing/: pairing_connection.h.patch
patches/fastboot/: fastboot.cpp.patch  fs.cpp.patch
patches/incfs/util/include/util/: map_ptr.h.patch
patches/libbase/: logging.cpp.patch
patches/libbase/include/android-base/: unique_fd.h.patch
patches/liblog/: log.h.patch  logger_write.cpp.patch
patches/liblp/: utility.cpp.patch
patches/libusb/: core.c.patch
patches/libutils/: CallStack.cpp.patch
patches/libutils/include/utils/: CallStack.h.patch
patches/libziparchive/: zip_archive.cc.patch
src/adb/: adb.cpp  socket_spec.cpp  sysdeps.h
src/adb/fastdeploy/proto/: ApkEntry.pb.cc
src/adb/proto/: adb_known_hosts.pb.cc  app_processes.pb.cc  pairing.pb.cc
src/brotli/: Android.bp
src/fastboot/: fastboot.cpp
src/libbase/: logging.cpp
src/liblp/: utility.cpp
src/libusb/: Android.bp  METADATA
src/libusb/libusb/: core.c
src/libutils/: CallStack.cpp
src/libziparchive/: zip_archive.cc  zip_writer.cc
